# mcp

./: .gitignore  LICENSE  README.md
client/: .env.example  mcp_servers_config.json  pyproject.toml
client/api/: main.py  mcp_client.py
client/frontend/: app.py  chatbot.py
servers/: main.py  pyproject.toml
servers/vectorstore/: vectorestore.py  vectorstoreretriever.py
